--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<!-- Directions Button with Place ID and Fallback to Google Maps -->
 										<ul class="actions">
 											<li>
-												<a href="#" class="button" onclick="openDirections()">Get Directions</a>
+												<a href="#" class="button get-directions-1" onclick="openDirections()">Get Directions</a>
 											</li>
 										</ul>
 									<script>
