--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 -->
 <html>
 	<head>
+		<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N4FWPSRF');</script>
+<!-- End Google Tag Manager -->
 		<title>Roma Mart Convenience</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -15,10 +22,20 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 	</head>
 	<body class="is-preload">
+		<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4FWPSRF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
+					<!-- Add the logo -->
+					<div class="logo-container">
+						<a href="index.html">
+							<img src="/assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+						</a>
+					</div>
 					<nav>
 						<ul>
 							<li><a href="#intro"><i class="fa-solid fa-house"></i> Welcome</a></li>
@@ -201,8 +218,15 @@
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
+					<!-- Add the logo -->
+					<div class="logo-container">
+						<a href="index.html">
+							<img src="assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+						</a>
+					</div>
 					<ul class="menu">
-						<li>&copy; 2025 Roma Mart Convenience. All rights reserved.</li>
+						<li>&copy; 2025 Roma Mart Corp. All rights reserved.</li>
+						<li><a href="privacypolicy.html">Privacy Policy</a></li>
    						<li><a href="http://html5up.net"><i class="fa-solid fa-link"></i> Design: HTML5 UP</a></li>
 					</ul>
 				</div>
