--- a/blogpage.html
+++ b/blogpage.html
@@ -37,10 +37,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="blogpage.html" class="active">Updates</a></li>
-						<li><a href="privacypolicy.html">Privacy Policy</a></li>
+						<li><a href="index.html#three"><i class="fa-solid fa-phone"></i> Get in Touch</a></li>
 					</ul>
 				</nav>
 			</header>
+
+			<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<!-- Add the logo -->
+					<div class="logo-container">
+						<a href="index.html">
+							<img src="/assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+						</a>
+					</div>
+					<nav>
+						<ul>
+							<li><a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
+							<li><a href="blogpage.html"><i class="fa-solid fa-newspaper"></i> Updates</a></li>
+							<li><a href="index.html#three"><i class="fa-solid fa-phone"></i> Get in Touch</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -49,10 +68,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Updates from the Roma Mart family</h1>
-							<span class="image fit"><img src="images/logo-framework.jpg" alt="" /></span>
-							<p>Get ready, Sarnia! Roma Mart is opening soon at 189 Wellington Street! 🏪 Your new go-to convenience store for all your essentials is almost here. Stay tuned for more updates! 🎉</p>
+							<!-- <span class="image fit"><img src="images/logo-framework.jpg" alt="" /></span> add main image here -->
+							<p>Welcome to our blog! Stay tuned for the latest updates, news, and announcements from Roma Mart.</p>
 						</div>
 					</section>
+					<section id="main" class="wrapper">
+    					<div class="inner">
+							<h2 class="major">Latest Updates</h2>
+        						<div id="latest-post">
+       						     <!-- Latest post will be dynamically loaded here -->
+    				    </div>
+    					    <hr />
+    					    <div id="older-posts">
+    				        <!-- Older posts will be dynamically loaded here -->
+    				    </div>
+    					    <div id="show-more-container" style="text-align: center; margin-top: 2em;">
+        				    <button id="show-more" class="button">Show More</button>
+        				</div>
+ 				   </div>
+				</section>
 
 			</div>
 
@@ -62,7 +96,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<!-- Add the logo -->
 					<div class="logo-container">
 						<a href="index.html">
-							<img src="assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+							<img src="assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
 						</a>
 					</div>
 					<ul class="menu">
@@ -81,6 +115,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/blog.js"></script>
 	</body>
 </html>
