--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<nav>
 						<ul>
 							<li><a href="#intro"><i class="fa-solid fa-house"></i> Welcome</a></li>
+							<li><a href="blogpage.html"><i class="fa-solid fa-newspaper"></i> Updates</a></li>
 							<li><a href="#one"><i class="fa-solid fa-location-pin"></i> Our Locations</a></li>
 							<li><a href="#two"><i class="fa-solid fa-info-circle"></i> About Us</a></li>
 							<li><a href="#three"><i class="fa-solid fa-phone"></i> Get in Touch</a></li>
@@ -225,7 +226,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<!-- Add the logo -->
 					<div class="logo-container">
 						<a href="index.html">
-							<img src="assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+							<img src="assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
 						</a>
 					</div>
 					<ul class="menu">
@@ -244,6 +245,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/blog.js"></script>
 
 	</body>
 </html>
