--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -37,10 +37,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="blogpage.html">Updates</a></li>
+						<li><a href="index.html#three"><i class="fa-solid fa-phone"></i> Get in Touch</a></li>
 						<li><a href="privacypolicy.html" class="active">Privacy Policy</a></li>
 					</ul>
 				</nav>
 			</header>
+<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<!-- Add the logo -->
+					<div class="logo-container">
+						<a href="index.html">
+							<img src="/assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+						</a>
+					</div>
+					<nav>
+						<ul>
+							<li><a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
+							<li><a href="blogpage.html"><i class="fa-solid fa-newspaper"></i> Updates</a></li>
+							<li><a href="index.html#three"><i class="fa-solid fa-phone"></i> Get in Touch</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -84,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<!-- Add the logo -->
 					<div class="logo-container">
 						<a href="index.html">
-							<img src="assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+							<img src="assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
 						</a>
 					</div>
 					<ul class="menu">
