--- a/blogposts/post1.html
+++ b/blogposts/post1.html
@@ -22,7 +22,7 @@
         <section id="main" class="wrapper">
             <div class="inner">
                 <h1>Coming Soon!</h1>
-                <span class="image fit"><img src="assets/images/logo_framework.jpg" alt="Coming Soon" /></span>
+                <span class="image fit"><img src="../assets/images/logo_framework.jpg" alt="Coming Soon" /></span>
                 <p>Get ready, Sarnia! Roma Mart is opening soon at 189 Wellington Street! 🏪 Your new go-to convenience store for all your essentials is almost here. <br />
 								Stay tuned for the latest updates, news, and announcements from Roma Mart. 🎉</p>
             </div>
@@ -34,7 +34,7 @@
 					<!-- Add the logo -->
 					<div class="logo-container">
 						<a href="index.html">
-							<img src="assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
+							<img src="../assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
 						</a>
 					</div>
 					<ul class="menu">
