--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-		<title>Roma Mart Convenience</title>
+		<title>Roma Mart</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -37,7 +37,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<!-- Add the logo -->
 					<div class="logo-container">
 						<a href="index.html">
-							<img src="/assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+							<img src="../assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
 						</a>
 					</div>
 					<nav>
@@ -70,7 +70,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/brand_signboard.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="../assets/images/brand_signboard.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2><i class="fa-solid fa-map-marker-alt"></i> 189-3 Wellington Street, Sarnia, ON</h2>
@@ -115,33 +115,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-solid fa-cart-shopping"></span>
-									<h3>Grocery Essentials 🛒</h3>
-									<p>Stocked with everyday must-haves — milk, bread, snacks, beverages, pantry staples — all just around the corner.</p>
+									<h3>Grocery Essentials</h3>
+									<p>🛒 Stocked with everyday must-haves — milk, bread, snacks, beverages, pantry staples — all just around the corner.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-solid fa-mug-hot"></span>
-									<h3>Café ☕</h3>
-									<p>Grab a fresh cup of coffee, tea, bubble tea, or matcha — perfect for your morning stop or afternoon pick-me-up. Discover tasty snacks and quick bites made for life on the go.</p>
+									<h3>Café</h3>
+									<p>☕ Grab a fresh cup of coffee, tea, bubble tea, or matcha — perfect for your morning stop or afternoon pick-me-up. Discover tasty snacks and quick bites made for life on the go.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-solid fa-credit-card"></span>
-									<h3>ATM + BTM (coming soon!) 🏧</h3>
-									<p>Need quick cash? Our in-store ATM is always ready, with secure and easy access whenever you need it. A Bitcoin/crypto machine is on the way for even more convenience.</p>
+									<h3>ATM + BTM (coming soon!)</h3>
+									<p>🏧 Need quick cash? Our in-store ATM is always ready, with secure and easy access whenever you need it. A Bitcoin/crypto machine is on the way for even more convenience.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-solid fa-ticket"></span>
-									<h3>Lottery 🎫</h3>
-									<p>Feeling lucky? We’ve got your favorite lottery tickets and scratch-offs — available right at the counter for our adult customers.</p>
+									<h3>Lottery</h3>
+									<p>🎫 Feeling lucky? We’ve got your favorite lottery tickets and scratch-offs — available right at the counter for our adult customers.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-solid fa-globe"></span>
-									<h3>International Products 🌍</h3>
-									<p>Taste the world! From spices to snacks, we carry a unique mix of global favorites you won’t find everywhere.</p>
+									<h3>International Products</h3>
+									<p>🌍 Taste the world! From spices to snacks, we carry a unique mix of global favorites you won’t find everywhere.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-solid fa-smoking"></span>
-									<h3>Tobacco 🚬</h3>
-									<p>We are licensed to offer a variety of tobacco products and accessories, all stocked responsibly for our adult customers.</p>
+									<h3>Tobacco</h3>
+									<p>🚬 We are licensed to offer a variety of tobacco products and accessories, all stocked responsibly for our adult customers.</p>
 								</section>
 							</div>
 							
@@ -226,7 +226,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<!-- Add the logo -->
 					<div class="logo-container">
 						<a href="index.html">
-							<img src="assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
+							<img src="../assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
 						</a>
 					</div>
 					<ul class="menu">
