--- a/blogposts/post1.html
+++ b/blogposts/post1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Grand Opening - Roma Mart</title>
+        <title>Coming Soon - Roma Mart</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="../assets/css/main.css" />
