--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -31,7 +31,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- Header -->
 			<header id="header">
 				<a href="index.html" class="title">
-					<img src="assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+					<img src="../assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
 				</a>
 				<nav>
 					<ul>
@@ -48,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<!-- Add the logo -->
 					<div class="logo-container">
 						<a href="index.html">
-							<img src="/assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
+							<img src="../assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
 						</a>
 					</div>
 					<nav>
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<!-- Add the logo -->
 					<div class="logo-container">
 						<a href="index.html">
-							<img src="assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
+							<img src="../assets/images/logo_h_primary_blw.jpg" alt="Roma Mart Logo" class="logo" />
 						</a>
 					</div>
 					<ul class="menu">
