--- a/blogpage.html
+++ b/blogpage.html
@@ -13,6 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-N4FWPSRF');</script>
 <!-- End Google Tag Manager -->
+ <script defer data-cfasync='false' src='https://s.clickiocdn.com/t/243023_wv.js'></script>
 		<title>Updates - Roma Mart</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
