--- a/blogposts/post1.html
+++ b/blogposts/post1.html
@@ -1,6 +1,14 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N4FWPSRF');</script>
+<!-- End Google Tag Manager -->
+        <script defer data-cfasync='false' src='https://s.clickiocdn.com/t/243023_wv.js'></script>
         <title>Coming Soon - Roma Mart</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
