--- a/blogposts/post1.html
+++ b/blogposts/post1.html
@@ -8,6 +8,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-N4FWPSRF');</script>
 <!-- End Google Tag Manager -->
+ <!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         <script defer data-cfasync='false' src='https://s.clickiocdn.com/t/243023_wv.js'></script>
         <title>Coming Soon - Roma Mart</title>
         <meta charset="utf-8" />
@@ -15,7 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <link rel="stylesheet" href="../assets/css/main.css" />
     </head>
     <body>
-        <!-- Header -->
+        <!-- Header deprecated
         <header id="header">
             <a href="../index.html" class="title">Roma Mart Convenience</a>
             <nav>
@@ -24,8 +26,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <li><a href="../blogpage.html" class="active">Updates</a></li>
                 </ul>
             </nav>
-        </header>
-
+        </header>  -->
+        <!-- Sidebar  -->
+         <div id="sidebar"></div>
+<!-- Sidebar Overlay -->
+<div id="sidebar-overlay"></div>
+        <!-- Menu Button -->
+<div id="menu-button">
+    <img src="../assets/images/apple-touch-icon.png" alt="Logo" class="menu-logo" />
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</div>
         <!-- Main -->
         <section id="main" class="wrapper">
             <div class="inner">
@@ -52,5 +66,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</ul>
 				</div>
 			</footer>
+            <!-- Scripts -->
+             <script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+			<script src="assets/js/sidebar.js"></script>
     </body>
 </html>
