--- a/index.html
+++ b/index.html
@@ -32,26 +32,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<!-- Add the logo -->
-					<div class="logo-container">
-						<a href="index.html">
-							<img src="../assets/images/logo_primary.jpg" alt="Roma Mart Logo" class="logo" />
-						</a>
-					</div>
-					<nav>
-						<ul>
-							<li><a href="#intro"><i class="fa-solid fa-house"></i> Welcome</a></li>
-							<li><a href="blogpage.html"><i class="fa-solid fa-newspaper"></i> Updates</a></li>
-							<li><a href="#one"><i class="fa-solid fa-location-pin"></i> Our Locations</a></li>
-							<li><a href="#two"><i class="fa-solid fa-info-circle"></i> About Us</a></li>
-							<li><a href="#three"><i class="fa-solid fa-phone"></i> Get in Touch</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
+		<!-- Sidebar  -->
+		 <div id="sidebar"></div>
+		<!-- Sidebar Overlay -->
+<div id="sidebar-overlay"></div>
+		<!-- Menu Button -->
+<div id="menu-button">
+    <img src="../assets/images/apple-touch-icon.png" alt="Logo" class="menu-logo" />
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</div>	
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -60,7 +53,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Roma Mart Convenience</h1>
-							<p>A community-first c-store in Sarnia, Ontario<br />
+							<p>A community-first c-store in Sarnia, Ontario <br />
 							Coming Soon!</p>
 							<ul class="actions">
 								<li><a href="#" class="button scrolly">Order Online</a></li> <!-- change # with link for POS ordering system -->
@@ -170,10 +163,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<label for="message">Message</label>
 												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
-										</div>
-										<ul class="actions">
+											<ul class="actions">
 											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
+											</ul>
+										</div>
+										
 									</form>
 								</section>
 								<section>
@@ -247,6 +241,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/blog.js"></script>
-
+			<script src="assets/js/sidebar.js"></script>
 	</body>
 </html>
